cambiado nombres de personajes en fotos de función al aire libre

--- a/amoralairelibre.html
+++ b/amoralairelibre.html
@@ -37,7 +37,7 @@
 </section>
 <section id="sec-3" >
 
-<h2>Marianela</h2>
+<h2>Julia</h2>
 
 <div class="figure">
 <p><img src="funcionamoralairelibre/DSC05240.JPG"  alt="DSC05240.JPG"/></p>
@@ -45,7 +45,7 @@
 </section>
 <section id="sec-4" >
 
-<h2>Marianela</h2>
+<h2>Julia</h2>
 
 <div class="figure">
 <p><img src="funcionamoralairelibre/DSC05243.JPG"  alt="DSC05243.JPG"/></p>
@@ -63,7 +63,7 @@
 </section>
 <section id="sec-6" >
 
-<h2>Claudio</h2>
+<h2>Nor</h2>
 
 <div class="figure">
 <p><img src="funcionamoralairelibre/DSC05247.JPG"  alt="DSC05247.JPG"/></p>
@@ -73,7 +73,7 @@
 </section>
 <section id="sec-7" >
 
-<h2>Claudio</h2>
+<h2>Nor</h2>
 
 <div class="figure">
 <p><img src="funcionamoralairelibre/DSC05248.JPG"  alt="DSC05248.JPG"/></p>
@@ -83,7 +83,7 @@
 </section>
 <section id="sec-8" >
 
-<h2>Marianela</h2>
+<h2>Julia</h2>
 
 <div class="figure">
 <p><img src="funcionamoralairelibre/DSC05249.JPG"  alt="DSC05249.JPG"/></p>
