--- a/amoralairelibre.html
+++ b/amoralairelibre.html
@@ -45,7 +45,7 @@
 </section>
 <section id="sec-4" >
 
-<h2>Julia2</h2>
+<h2>Julia</h2>
 
 <div class="figure">
 <p><img src="funcionamoralairelibre/DSC05243.JPG"  alt="DSC05243.JPG"/></p>
