--- a/galeria.html
+++ b/galeria.html
@@ -96,6 +96,10 @@
 <h2 id="sec-1"><a href="./amoralairelibre.html">Función amor al aire libre 8 de Septiembre 2012</a></h2>
 </div>
 
+<div id="outline-container-sec-2" class="outline-2">
+<h2 id="sec-2"><a href="./funcionconrado.html">funciones en la conrado 6 13 y 20 de Agosto</a></h2>
+</div>
+
   </div>
 </article>
       </div>
