organizadas las imagenes en carpeta images

--- a/integrantes.html
+++ b/integrantes.html
@@ -116,7 +116,7 @@
 <div class="hero-unit" style="font-size: 200%;">
 
 <p>
-<a href="./caroljuno2.jpg"><img src="./caroljuno2thump.jpg"  alt="caroljuno2thump.jpg"/></a>
+<a href="images/caroljuno2.jpg"><img src="./caroljuno2thump.jpg"  alt="caroljuno2thump.jpg"/></a>
 </p>
 
 </div>
@@ -152,7 +152,7 @@ Adriana en el rol de "Olga" en Coronación de Perinelli (2009-)
 <div class="hero-unit" style="font-size: 200%;">
 
 <p>
-<a href="./adriana.jpg"><img src="./sadriana.jpg"  alt="sadriana.jpg"/></a>
+<a href="images/adriana.jpg"><img src="./sadriana.jpg"  alt="sadriana.jpg"/></a>
 </p>
 
 </div>
@@ -183,7 +183,7 @@ Adriana en el rol de "Asu" en Amor al aire libre de Carlos Pais (2011-)
 <div class="hero-unit" style="font-size: 200%;">
 
 <p>
-<a href="./sadriana2.jpg"><img src="./thumpsadriana2.jpg"  alt="thumpsadriana2.jpg"/></a>
+<a href="images/sadriana2.jpg"><img src="./thumpsadriana2.jpg"  alt="thumpsadriana2.jpg"/></a>
 </p>
 
 </div>
@@ -218,7 +218,7 @@ Marianela en el rol de "Julia" en Amor al aire libre de Carlos Pais (2011-)
 <div class="hero-unit" style="font-size: 200%;">
 
 <p>
-<a href="./smarianela.JPG"><img src="./thumpmarianela.JPG"  alt="thumpmarianela.JPG"/></a>
+<a href="./smarianela.jpg"><img src="./thumpmarianela.jpg"  alt="thumpmarianela.jpg"/></a>
 </p>
 
 </div>
