--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
 <div id="myCarousel" class="carousel slide">
   <!-- Carousel items -->
   <div class="carousel-inner">
-    <div class="active item"><img src="./slidecoronacion.jpg"  alt=""/></div>
-    <div class="item"><img src="./slideamoralairelibre.jpg"  alt=""/></div>
-    <div class="item"><img src="./slideviejoshospitales.jpg"  alt=""/></div>
+    <div class="active item"><img src="./images/slidecoronacion.jpg"  alt=""/></div>
+    <div class="item"><img src="./images/slideamoralairelibre.jpg"  alt=""/></div>
+    <div class="item"><img src="./images/slideviejoshospitales.jpg"  alt=""/></div>
   </div>
   <!-- Carousel nav -->
   <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
