--- a/integrantes.html
+++ b/integrantes.html
@@ -101,7 +101,7 @@
 <div id="outline-container-sec-1" class="outline-2">
 <h2 id="sec-1">Carol Yordanoff</h2>
 <div class="outline-text-2" id="text-1">
-<div class="row "><div class="span4 ">
+<div class="row "><div class="span6 ">
 
 
 <div class="hero-unit">
@@ -111,11 +111,43 @@
 "la dire"
 </p>
 
+<p>
+Nació en Bahía Blanca en 1969. Su formación en el campo de las artes escénicas
+abarca, desde su inicio, la danza y el teatro en forma conjunta. Comenzó como actriz y
+bailarina. Posteriormente ejerció como coreógrafa contemporánea en el Ballet Río Negro y
+como autora y directora teatral en la Cooperativa de Trabajo Artístico La Hormiga
+Circular.
+</p>
+
+<p>
+Seis de sus obras han sido puestas en escena: Pinoquitos, Los viajes del Principito
+(ambas adaptaciones libres), La Noria, Malas, Malahuella y Spilimbergo.
+Se forma en el campo visual con la carrera de Técnico Gráfico en la Escuela
+Superior de Bellas Artes de Neuquén. Durante dos años consecutivos fue becada por la
+Fundación Antorchas para especializarse en danza y en teatro. Uno de sus ballets, La
+Cocina de Franz, recibió mención especial en el Concurso Nacional y Provincial de la
+ciudad de Trelew.
+</p>
+
+<p>
+Fue co­conductora y guionista del programa para niños Rompecabezas en la
+televisión rionegrina.
+</p>
+
+<p>
+Se ha especializado en guión para Cine y Televisión en Madrid.
+</p>
+
+<p>
+Actualmente dicta clases de expresión literaria en la ESBA (Nqn) y reside en
+Plottier, donde dirige el grupo teatral Juno.
+</p>
+
 
 </div>
 
 
-</div><div class="span6 ">
+</div><div class="span4 ">
 
 
 
