--- a/galeria.html
+++ b/galeria.html
@@ -99,11 +99,14 @@
     
 
 <div id="outline-container-sec-1" class="outline-2">
-<h2 id="sec-1"><a href="./amoralairelibre.html">Función amor al aire libre 8 de Septiembre 2012</a></h2>
+<h2 id="sec-1"><a href="https://picasaweb.google.com/115060941521100186677/Funcioncardenal3deagosto2013?feat=flashslideshow#slideshow/5909191111835833042">Inaguración sala "El Zaguán"</a></h2>
+</div>
+<div id="outline-container-sec-2" class="outline-2">
+<h2 id="sec-2"><a href="./amoralairelibre.html">Función amor al aire libre 8 de Septiembre 2012</a></h2>
 </div>
 
-<div id="outline-container-sec-2" class="outline-2">
-<h2 id="sec-2"><a href="./funcionconrado.html">funciones en la conrado 6 13 y 20 de Agosto</a></h2>
+<div id="outline-container-sec-3" class="outline-2">
+<h2 id="sec-3"><a href="./funcionconrado.html">funciones en la conrado 6 13 y 20 de Agosto</a></h2>
 </div>
 
   </div>
