--- a/index.html
+++ b/index.html
@@ -150,6 +150,21 @@ San Martín 239 - Plottier
 
 <h4>Entradas</h4>
 
+<p>
+Reservas: Tel: 155701450 o 156333139 o 154652840
+</p>
+
+<h5>Circuito de Teatro La Hormiga</h5>
+
+<ul class="org-ul">
+<li>Entrada General: $65
+</li>
+<li>Abono de 9 entradas: $330
+</li>
+</ul>
+
+<h5>Otros Espectáculos Teatrales</h5>
+
 <ul class="org-ul">
 <li>Entrada General: $50
 </li>
