--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
 <div id="myCarousel" class="carousel slide">
   <!-- Carousel items -->
   <div class="carousel-inner">
-    <div class="active item"><img src="./images/slideviejoshospitales.jpg"  alt=""/></div>
+
+    <div class="active item"><img src="./images/slideanoineycarm.jpg"  alt=""/></div>
+    <div class="item"><img src="./images/slideviejoshospitales.jpg"  alt=""/></div>
     <div class="item"><img src="./images/slideamoralairelibre.jpg"  alt=""/></div>
     <div class="item"><img src="./images/slidecoronacion.jpg"  alt=""/></div>
   </div>
