--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ San Martín 239 - Plottier
 <h4>Entradas</h4>
 
 <p>
-Reservas: Tel: 155701450 o 156333139 o 154652840
+Reservas: Tel: 156003737
 </p>
 
 <h5>Circuito de Teatro La Hormiga</h5>
@@ -182,6 +182,15 @@ Reservas: Tel: 155701450 o 156333139 o 154652840
 </li>
 </ul>
 
+<p>
+entradas anticipadas en
+</p>
+
+<p>
+Librería Mil Hojas (Av. del trabajo 603)
+Librería El Librero (Belgrano 118)
+Librería Abracadabra (Buratovich 14)
+</p>
 
 </div></div>
 </div>
