--- a/integrantes.html
+++ b/integrantes.html
@@ -169,8 +169,78 @@ Plottier, donde dirige el grupo teatral Juno.
 
 
 <div id="outline-container-sec-2" class="outline-2">
-<h2 id="sec-2">Adriana Perkovic</h2>
+<h2 id="sec-2">Claudio Vaucheret</h2>
 <div class="outline-text-2" id="text-2">
+<div class="row "><div class="span4 ">
+
+
+<div class="hero-unit">
+
+
+<p>
+Claudio en el rol de "Antoine" en "Antoine y Carmelinda" de Alejandro Finzi (2014-)
+</p>
+
+
+</div>
+
+
+</div><div class="span6 ">
+
+
+
+<div class="hero-unit" style="font-size: 200%;">
+
+
+<div class="figure">
+<p><img src="./IMG_0595.jpg" alt="IMG_0595.jpg" />
+</p>
+</div>
+
+</div>
+
+
+</div></div>
+
+
+<div class="row "><div class="span4 ">
+
+
+<div class="hero-unit">
+
+
+<p>
+Claudio en el rol de "Nor" en Amor al aire libre de Carlos Pais (2011-)
+</p>
+
+
+</div>
+
+
+</div><div class="span6 ">
+
+
+
+<div class="hero-unit" style="font-size: 200%;">
+
+
+<div class="figure">
+<p><a href="./claudio.jpg"><img src="./sclaudio.jpg" alt="sclaudio.jpg" /></a>
+</p>
+</div>
+
+</div>
+
+
+</div></div>
+</div>
+</div>
+
+
+
+<div id="outline-container-sec-3" class="outline-2">
+<h2 id="sec-3">Adriana Perkovic</h2>
+<div class="outline-text-2" id="text-3">
 <div class="row "><div class="span4 ">
 
 
@@ -238,9 +308,9 @@ Adriana en el rol de "Asu" en Amor al aire libre de Carlos Pais (2011-)
 </div>
 
 
-<div id="outline-container-sec-3" class="outline-2">
-<h2 id="sec-3">Marianela Tisberger</h2>
-<div class="outline-text-2" id="text-3">
+<div id="outline-container-sec-4" class="outline-2">
+<h2 id="sec-4">Marianela Tisberger</h2>
+<div class="outline-text-2" id="text-4">
 <div class="row "><div class="span4 ">
 
 
@@ -274,42 +344,6 @@ Marianela en el rol de "Julia" en Amor al aire libre de Carlos Pais (2011-)
 </div>
 </div>
 
-
-<div id="outline-container-sec-4" class="outline-2">
-<h2 id="sec-4">Claudio Vaucheret</h2>
-<div class="outline-text-2" id="text-4">
-<div class="row "><div class="span4 ">
-
-
-<div class="hero-unit">
-
-
-<p>
-Claudio en el rol de "Nor" en Amor al aire libre de Carlos Pais (2011-)
-</p>
-
-
-</div>
-
-
-</div><div class="span6 ">
-
-
-
-<div class="hero-unit" style="font-size: 200%;">
-
-
-<div class="figure">
-<p><a href="./claudio.jpg"><img src="./sclaudio.jpg" alt="sclaudio.jpg" /></a>
-</p>
-</div>
-
-</div>
-
-
-</div></div>
-</div>
-</div>
 
 
 
