--- a/integrantes.html
+++ b/integrantes.html
@@ -169,8 +169,83 @@ Plottier, donde dirige el grupo teatral Juno.
 
 
 <div id="outline-container-sec-2" class="outline-2">
-<h2 id="sec-2">Jorge Sznek</h2>
+<h2 id="sec-2">Tamara Frezza</h2>
 <div class="outline-text-2" id="text-2">
+<div class="row "><div class="span4 ">
+
+
+<div class="hero-unit">
+
+
+<p>
+Tamara en el rol de "Carmelinda" en "Antoine y Carmelinda" de Alejandro Finzi (2014-)
+</p>
+
+
+</div>
+
+
+</div><div class="span6 ">
+
+
+
+<div class="hero-unit" style="font-size: 200%;">
+
+
+<div class="figure">
+<p><img src="./tamara.jpg" alt="tamara.jpg" />
+</p>
+</div>
+
+</div>
+
+
+</div></div>
+</div>
+</div>
+
+
+
+<div id="outline-container-sec-3" class="outline-2">
+<h2 id="sec-3">María Luján Urreaga</h2>
+<div class="outline-text-2" id="text-3">
+<div class="row "><div class="span4 ">
+
+
+<div class="hero-unit">
+
+
+<p>
+Luján en el rol de "El Espejo" en "Antoine y Carmelinda" de Alejandro Finzi (2014-)
+</p>
+
+
+</div>
+
+
+</div><div class="span6 ">
+
+
+
+<div class="hero-unit" style="font-size: 200%;">
+
+
+<div class="figure">
+<p><img src="./lujan.jpg" alt="lujan.jpg" />
+</p>
+</div>
+
+</div>
+
+
+</div></div>
+</div>
+</div>
+
+
+<div id="outline-container-sec-4" class="outline-2">
+<h2 id="sec-4">Jorge Sznek</h2>
+<div class="outline-text-2" id="text-4">
 <div class="row "><div class="span4 ">
 
 
@@ -205,9 +280,9 @@ Jorge en el rol de "El Viento" en "Antoine y Carmelinda" de Alejandro Finzi (201
 </div>
 
 
-<div id="outline-container-sec-3" class="outline-2">
-<h2 id="sec-3">Claudio Vaucheret</h2>
-<div class="outline-text-2" id="text-3">
+<div id="outline-container-sec-5" class="outline-2">
+<h2 id="sec-5">Claudio Vaucheret</h2>
+<div class="outline-text-2" id="text-5">
 <div class="row "><div class="span4 ">
 
 
@@ -275,9 +350,9 @@ Claudio en el rol de "Nor" en Amor al aire libre de Carlos Pais (2011-)
 
 
 
-<div id="outline-container-sec-4" class="outline-2">
-<h2 id="sec-4">Adriana Perkovic</h2>
-<div class="outline-text-2" id="text-4">
+<div id="outline-container-sec-6" class="outline-2">
+<h2 id="sec-6">Adriana Perkovic</h2>
+<div class="outline-text-2" id="text-6">
 <div class="row "><div class="span4 ">
 
 
@@ -345,9 +420,9 @@ Adriana en el rol de "Asu" en Amor al aire libre de Carlos Pais (2011-)
 </div>
 
 
-<div id="outline-container-sec-5" class="outline-2">
-<h2 id="sec-5">Marianela Tisberger</h2>
-<div class="outline-text-2" id="text-5">
+<div id="outline-container-sec-7" class="outline-2">
+<h2 id="sec-7">Marianela Tisberger</h2>
+<div class="outline-text-2" id="text-7">
 <div class="row "><div class="span4 ">
 
 
@@ -384,9 +459,9 @@ Marianela en el rol de "Julia" en Amor al aire libre de Carlos Pais (2011-)
 
 
 
-<div id="outline-container-sec-6" class="outline-2">
-<h2 id="sec-6">Juliana Villanueva</h2>
-<div class="outline-text-2" id="text-6">
+<div id="outline-container-sec-8" class="outline-2">
+<h2 id="sec-8">Juliana Villanueva</h2>
+<div class="outline-text-2" id="text-8">
 <div class="row "><div class="span4 ">
 
 
@@ -420,9 +495,9 @@ Juliana en el rol de "Carmen" en Coronación de Perinelli (2009-)
 </div>
 </div>
 
-<div id="outline-container-sec-7" class="outline-2">
-<h2 id="sec-7">Eugenia Sepúlveda</h2>
-<div class="outline-text-2" id="text-7">
+<div id="outline-container-sec-9" class="outline-2">
+<h2 id="sec-9">Eugenia Sepúlveda</h2>
+<div class="outline-text-2" id="text-9">
 <div class="row "><div class="span4 ">
 
 
