--- a/index.html
+++ b/index.html
@@ -129,6 +129,10 @@
 <a href="./galeria.html"><i>icon-picture icon-white</i> Galería de Fotos</a>
 </p>
 
+<p>
+<a href="./obras.html"><i>icon-picture icon-white</i> Obras</a>
+</p>
+
 
 </div>
 
