--- a/galeria.html
+++ b/galeria.html
@@ -102,19 +102,22 @@
     
 
 <div id="outline-container-sec-1" class="outline-2">
-<h2 id="sec-1"><a href="./ensayo3deoctubre.html">Fotos Ensayo Antoine y Carmelinda 3/10/14</a></h2>
+<h2 id="sec-1"><a href="./jornadas6deoctubre.html">Fotos de Antoine y Carmelinda en las Jornadas de Dramaturgia UNCO 6/10/14</a></h2>
 </div>
 <div id="outline-container-sec-2" class="outline-2">
-<h2 id="sec-2"><a href="./funcion17agosto2013.html">Fotos función 17 de Agosto 2013</a></h2>
+<h2 id="sec-2"><a href="./ensayo3deoctubre.html">Fotos Ensayo Antoine y Carmelinda 3/10/14</a></h2>
 </div>
 <div id="outline-container-sec-3" class="outline-2">
-<h2 id="sec-3"><a href="./inaguracionsalaelzaguan.html">Inaguración sala "El Zaguán"</a></h2>
+<h2 id="sec-3"><a href="./funcion17agosto2013.html">Fotos función 17 de Agosto 2013</a></h2>
 </div>
 <div id="outline-container-sec-4" class="outline-2">
-<h2 id="sec-4"><a href="./funcionamoralairelibrefotos.html">Función amor al aire libre 8 de Septiembre 2012</a></h2>
+<h2 id="sec-4"><a href="./inaguracionsalaelzaguan.html">Inaguración sala "El Zaguán"</a></h2>
 </div>
 <div id="outline-container-sec-5" class="outline-2">
-<h2 id="sec-5"><a href="./funcionesconradocoronacion.html">funciones en la conrado 6 13 y 20 de Agosto</a></h2>
+<h2 id="sec-5"><a href="./funcionamoralairelibrefotos.html">Función amor al aire libre 8 de Septiembre 2012</a></h2>
+</div>
+<div id="outline-container-sec-6" class="outline-2">
+<h2 id="sec-6"><a href="./funcionesconradocoronacion.html">funciones en la conrado 6 13 y 20 de Agosto</a></h2>
 </div>
 
   </div>
