--- a/obras.html
+++ b/obras.html
@@ -103,18 +103,111 @@
 
 <div id="outline-container-sec-1" class="outline-2">
 <h2 id="sec-1">Antoine y Carmelinda</h2>
-</div>
+<div class="outline-text-2" id="text-1">
+<p>
+(2014- )
+</p>
 
+<ul class="org-ul">
+<li><b>Autor</b>: <i>Alejandro Finzi</i>
+</li>
+<li><b>Dirección</b>: <i>Carol Yordanoff</i>
+</li>
+<li><b>Actúan</b>: <i>Claudio Vaucheret, Tamara Frezza, María Luján Urreaga, Jorge Sznek</i>
+</li>
+<li><b>Voz en off</b>: <i>Alejandro Finzi</i>
+</li>
+<li><b>Asistencia de dirección</b>: <i>María Alejandra Cortez</i>
+</li>
+<li><b>Diseño de iluminación</b>: <i>Jesús Esteban Hernandez</i>
+</li>
+<li><b>Diseño escenográfico</b>:  <i>Carol Yordanoff y Julio Sepúlveda</i>
+</li>
+<li><b>Asistentes de escena y Operación de sonido</b>: <i>Alejandra Cortez y Julio Sepúlveda</i>
+</li>
+<li><b>Operador/a de de luces</b>: <i>Claudia Brito y Jesús Esteban Hernandez</i>
+</li>
+<li><b>Diseño de vestuario</b>: <i>Carol Yordanoff</i>
+</li>
+<li><b>Diseño sonoro</b>: <i>Fernando Barraza y Cecilia Delloro</i>
+</li>
+<li><b>Realización escenográfica y dibujos</b>: <i>Julio Sepúlveda</i>
+</li>
+<li><b>Realización de vestuario</b>: <i>Ivana Yordanoff y Silvina Bobato</i>
+</li>
+<li><b>Realización y asesoramiento de títeres</b>: <i>Silvina Vai</i>
+</li>
+<li><b>Producción</b>: <i>María de los Ángeles Olguín</i>
+</li>
+<li><b>Diseño gráfico</b>: <i>Juan José Esteve</i>
+</li>
+<li><b>Fotos</b>: <i>Mariano Otero</i>
+</li>
+</ul>
+</div>
+</div>
 <div id="outline-container-sec-2" class="outline-2">
 <h2 id="sec-2">Viejos Hospitales</h2>
+<div class="outline-text-2" id="text-2">
+<p>
+(2012)
+</p>
+
+<ul class="org-ul">
+<li><b>Autor</b>: <i>Alejandro Finzi</i>
+</li>
+<li><b>Dirección</b>: <i>Carol Yordanoff</i>
+</li>
+<li><b>Actúan</b>: <i>Andres Flores, Adriana Perkovic, Marianela Tisberger, Fernando Escobar</i>
+</li>
+<li><b>Asistencia técnica</b>: <i>Claudio Vaucheret</i>
+</li>
+</ul>
+</div>
 </div>
 
 <div id="outline-container-sec-3" class="outline-2">
 <h2 id="sec-3">Amor al aire libre</h2>
+<div class="outline-text-2" id="text-3">
+<p>
+(2011 - 2012)
+</p>
+
+<ul class="org-ul">
+<li><b>Autor</b>: <i>Carlos Pais</i>
+</li>
+<li><b>Dirección</b>: <i>Carol Yordanoff</i>
+</li>
+<li><b>Actúan</b>: <i>Claudio Vaucheret, Adriana Perkovic, Marianela Tisberger</i>
+</li>
+<li><b>Asistencia técnica</b>: <i>Fernando Escobar</i>
+</li>
+</ul>
+</div>
 </div>
 
 <div id="outline-container-sec-4" class="outline-2">
 <h2 id="sec-4">Coronación</h2>
+<div class="outline-text-2" id="text-4">
+<p>
+(2009 - 2010)
+</p>
+
+<ul class="org-ul">
+<li><b>Autor</b>: <i>Roberto Perinelli</i>
+</li>
+<li><b>Dirección</b>: <i>Carol Yordanoff</i>
+</li>
+<li><b>Actúan</b>: <i>Adriana Perkovic, Juliana Villanueva, Alejandra Fredes, Eugenia Sepúlveda</i>
+</li>
+<li><b>Escenografía</b>: <i>Carlos Nahuel</i>
+</li>
+<li><b>Diseño de imagen</b>: <i>Daniel Gallardo</i>
+</li>
+<li><b>Asistencia técnica</b>: <i>Claudio Vaucheret</i>
+</li>
+</ul>
+</div>
 </div>
 
   </div>
