--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 <script src="./style/bootstrap/js/bootstrap-carousel.js" type="text/javascript"></script>
 
 
-<h1 style="font-size: 500%;">Juno Teatro</h1>
+<BR><BR><h1 style="font-size: 500%;">Juno Teatro</h1>
 
 </div><div class="span4 ">
 
