--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 <script src="./style/bootstrap/js/bootstrap-carousel.js" type="text/javascript"></script>
 
 
-<BR><BR><h1 style="font-size: 500%;">Juno Teatro</h1>
+<BR><BR><h1 style="font-size: 500%;">Juno Teatro</h1><BR><BR>
 
 </div><div class="span4 ">
 
@@ -129,9 +129,6 @@
 <a href="./archives.html"><i>icon-list icon-white</i> Archivo</a>
 </p>
 
-<p>
-<a href="http://www.junocultural.com.ar"><i>icon-github-sign icon-white</i> Juno Cultural</a>
-</p>
 
 </div>
 
