--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 <script src="./style/bootstrap/js/bootstrap-carousel.js" type="text/javascript"></script>
 
 
-<BR><BR><h1 style="font-size: 500%;">Juno Teatro</h1><BR> <a href="http://www.facebook.com/profile.php?id=100006887778545&fref=ts" class="sm-link"><img src="./images/social_media_icons_flat_shadow_set_256x256_0000_facebook.png" alt="facebook"></a><a href="http://twitter.com/vaucheret" class="sm-link"><img src="./images/social_media_icons_flat_shadow_set_256x256_0002_twitter.png" alt="twitter"></a><a href="http://plus.google.com/u/1/107898037612474111049/posts" class="sm-link" rel="author"><img src="./images/social_media_icons_flat_shadow_set_256x256_0003_google+.png" alt="g+"></a><BR>
+<BR><BR><h1 style="font-size: 500%;">Juno Teatro</h1><BR> <a href="http://www.facebook.com/profile.php?id=100006887778545&fref=ts" class="sm-link"><img src="./images/social_media_icons_flat_shadow_set_256x256_0000_facebook.png" alt="facebook"></a><a href="http://twitter.com/junoteatro" class="sm-link"><img src="./images/social_media_icons_flat_shadow_set_256x256_0002_twitter.png" alt="twitter"></a><a href="http://plus.google.com/u/1/107898037612474111049/posts" class="sm-link" rel="author"><img src="./images/social_media_icons_flat_shadow_set_256x256_0003_google+.png" alt="g+"></a><BR>
 
 
 
