--- a/index.html
+++ b/index.html
@@ -153,6 +153,24 @@ San Martín 239 - Plottier
 
 <iframe id="91148540" src="https://www.google.com/calendar/embed?src=dhupj4hv0opfr8gn0j82l2vfk8@group.calendar.google.com&amp;color=%23668CD9&amp;mode=AGENDA&amp;showTitle=0&amp;showNav=1&amp;showDate=1&amp;showTabs=0&amp;showCalendars=0&amp;hl=es" title="Teatro &quot;El Zaguán&quot;" width="450" height="400" frameborder="0" scrolling="no"></iframe>
 
+
+
+<div>
+<script>
+  (function() {
+    var cx = '004261549845363472144:dbmlw5zshk4';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
+    gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
+        '//www.google.com/cse/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
+  })();
+</script>
+<gcse:search></gcse:search>
+</div>
+
 </div><div class="span4 ">
 
 
