--- a/index.html
+++ b/index.html
@@ -85,23 +85,7 @@
 
 <article>
   <div class="article-content">
-    <div>
-<script>
-  (function() {
-    var cx = '004261549845363472144:dbmlw5zshk4';
-    var gcse = document.createElement('script');
-    gcse.type = 'text/javascript';
-    gcse.async = true;
-    gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
-        '//www.google.com/cse/cse.js?cx=' + cx;
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(gcse, s);
-  })();
-</script>
-<gcse:search></gcse:search>
-</div><BR>
-
-<div class="row "><div class="span8 ">
+    <div class="row "><div class="span8 ">
 
 
 
@@ -128,6 +112,22 @@
 
 </div><div class="span4 ">
 
+
+<div>
+<script>
+  (function() {
+    var cx = '004261549845363472144:dbmlw5zshk4';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
+    gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
+        '//www.google.com/cse/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
+  })();
+</script>
+<gcse:search></gcse:search>
+</div>
 
 
 <div class="hero-unit" style="font-size: 200%;">
