--- a/obras.html
+++ b/obras.html
@@ -105,7 +105,7 @@
 <h2 id="sec-1">Antoine y Carmelinda</h2>
 <div class="outline-text-2" id="text-1">
 <p>
-(2014- )
+(2014- EN CARTEL) <a href="images/Carpeta%20Antoine%20y%20Carmelinda%20.pdf">Bajar DOSSIER en PDF</a>
 </p>
 
 <ul class="org-ul">
@@ -119,13 +119,13 @@
 </li>
 <li><b>Asistencia de dirección</b>: <i>María Alejandra Cortez</i>
 </li>
-<li><b>Diseño de iluminación</b>: <i>Jesús Esteban Hernandez</i>
+<li><b>Diseño de iluminación</b>: <i>Jesús Hernandez</i>
 </li>
 <li><b>Diseño escenográfico</b>:  <i>Carol Yordanoff y Julio Sepúlveda</i>
 </li>
 <li><b>Asistentes de escena y Operación de sonido</b>: <i>Alejandra Cortez y Julio Sepúlveda</i>
 </li>
-<li><b>Operador/a de de luces</b>: <i>Claudia Brito y Jesús Esteban Hernandez</i>
+<li><b>Operador/a de de luces</b>: <i>Claudia Brito y Jesús Hernandez</i>
 </li>
 <li><b>Diseño de vestuario</b>: <i>Carol Yordanoff</i>
 </li>
