--- a/obras.html
+++ b/obras.html
@@ -105,7 +105,7 @@
 <h2 id="sec-1">Antoine y Carmelinda</h2>
 <div class="outline-text-2" id="text-1">
 <p>
-(2014- EN CARTEL) <a href="images/Carpeta%20Antoine%20y%20Carmelinda%20.pdf">Bajar DOSSIER en PDF</a>
+(2014- EN CARTEL) <a href="images/Carpeta Antoine y Carmelinda.pdf">Bajar DOSSIER en PDF</a>
 </p>
 
 <ul class="org-ul">
