--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ San Martín 239 - Plottier
 <div class="row "><div class="span7 ">
 
 
-<iframe src="https://www.google.com/calendar/embed?src=junoteatro%40gmail.com&ctz=America/New_York" style="border: 0" width="450" height="400" frameborder="0" scrolling="no"></iframe>
+<iframe src="https://www.google.com/calendar/embed?src=junoteatro%40gmail.com&ctz=America/Argentina/Buenos_Aires ;showTitle=0&amp;showNav=1&amp;showDate=1&amp;showTabs=0&amp;" width="450" height="400" frameborder="0" scrolling="no"></iframe>
 
 
 
