--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
 
 <div id="outline-container-sec-1" class="outline-2">
-<h2 id="sec-1">Programación del Teatro "El Zaguán"</h2>
+<h2 id="sec-1">Actividades en el Teatro "El Zaguán"</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 Sala de Teatro Independiente
