--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ San Martín 239 - Plottier
 <div class="row "><div class="span7 ">
 
 
-<iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;mode=AGENDA&amp;height=500&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=69ssqnr76oal5r3a0q716kg440%40group.calendar.google.com&amp;color=%232F6309&amp;src=junoteatro%40gmail.com&amp;color=%2329527A&amp;src=dhupj4hv0opfr8gn0j82l2vfk8%40group.calendar.google.com&amp;color=%23853104&amp;ctz=America%2FArgentina%2FBuenos_Aires" style=" border-width:0 " width="600" height="500" frameborder="0" scrolling="no"></iframe>
+<iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;mode=AGENDA&amp;height=500&amp;wkst=1&amp;hl=es_419&amp;bgcolor=%23FFFFFF&amp;src=69ssqnr76oal5r3a0q716kg440%40group.calendar.google.com&amp;color=%232F6309&amp;src=junoteatro%40gmail.com&amp;color=%2329527A&amp;src=dhupj4hv0opfr8gn0j82l2vfk8%40group.calendar.google.com&amp;color=%23853104&amp;ctz=America%2FArgentina%2FBuenos_Aires" style=" border-width:0 " width="600" height="500" frameborder="0" scrolling="no"></iframe>
 
 
 
