--- a/obras.html
+++ b/obras.html
@@ -104,6 +104,13 @@
 <div id="outline-container-sec-1" class="outline-2">
 <h2 id="sec-1">Antoine y Carmelinda</h2>
 <div class="outline-text-2" id="text-1">
+<div class="row "><div class="span6 ">
+
+
+<div class="hero-unit">
+
+
+
 <p>
 (2014- EN CARTEL) <a href="./CarpetaAntoineyCarmelinda.pdf">Bajar DOSSIER en PDF</a>  
 </p>
@@ -144,11 +151,31 @@
 <li><b>Fotos</b>: <i>Mariano Otero</i>
 </li>
 </ul>
+
+
+</div>
+
+
+</div><div class="span4 ">
+
+
+
+
+</div></div>
 </div>
 </div>
+
+
 <div id="outline-container-sec-2" class="outline-2">
 <h2 id="sec-2">Viejos Hospitales</h2>
 <div class="outline-text-2" id="text-2">
+<div class="row "><div class="span6 ">
+
+
+<div class="hero-unit">
+
+
+
 <p>
 (2012)
 </p>
@@ -163,12 +190,32 @@
 <li><b>Asistencia técnica</b>: <i>Claudio Vaucheret</i>
 </li>
 </ul>
+
+
+
+</div>
+
+
+</div><div class="span4 ">
+
+
+
+
+</div></div>
 </div>
 </div>
+
 
 <div id="outline-container-sec-3" class="outline-2">
 <h2 id="sec-3">Amor al aire libre</h2>
 <div class="outline-text-2" id="text-3">
+<div class="row "><div class="span6 ">
+
+
+<div class="hero-unit">
+
+
+
 <p>
 (2011 - 2012)
 </p>
@@ -183,12 +230,32 @@
 <li><b>Asistencia técnica</b>: <i>Fernando Escobar</i>
 </li>
 </ul>
+
+
+
+</div>
+
+
+</div><div class="span4 ">
+
+
+
+
+</div></div>
 </div>
 </div>
+
 
 <div id="outline-container-sec-4" class="outline-2">
 <h2 id="sec-4">Coronación</h2>
 <div class="outline-text-2" id="text-4">
+<div class="row "><div class="span6 ">
+
+
+<div class="hero-unit">
+
+
+
 <p>
 (2009 - 2010)
 </p>
@@ -207,6 +274,17 @@
 <li><b>Asistencia técnica</b>: <i>Claudio Vaucheret</i>
 </li>
 </ul>
+
+
+</div>
+
+
+</div><div class="span4 ">
+
+
+
+
+</div></div>
 </div>
 </div>
 
