--- a/obras.html
+++ b/obras.html
@@ -112,7 +112,7 @@
 
 
 <p>
-(2014- EN CARTEL) <a href="./CarpetaAntoineyCarmelinda.pdf">Bajar DOSSIER en PDF</a>  
+(2014- EN CARTEL) <a href="./CarpetaAntoineyCarmelinda.pdf">Bajar DOSSIER en PDF</a>
 </p>
 
 <ul class="org-ul">
@@ -165,6 +165,10 @@
 </p>
 </div>
 
+<p>
+<a href="./CarpetaAntoineyCarmelinda.pdf">Bajar DOSSIER en PDF</a>
+</p>
+
 
 </div></div>
 </div>
@@ -205,6 +209,11 @@
 
 
 
+<div class="figure">
+<p><img src="./slideviejoshospitales.jpg" alt="slideviejoshospitales.jpg" />
+</p>
+</div>
+
 
 </div></div>
 </div>
@@ -244,6 +253,11 @@
 </div><div class="span4 ">
 
 
+
+<div class="figure">
+<p><img src="./slideamoralairelibre.jpg" alt="slideamoralairelibre.jpg" />
+</p>
+</div>
 
 
 </div></div>
@@ -287,6 +301,11 @@
 </div><div class="span4 ">
 
 
+
+<div class="figure">
+<p><img src="./slidecoronacion.jpg" alt="slidecoronacion.jpg" />
+</p>
+</div>
 
 
 </div></div>
