--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   <!-- Carousel items -->
   <div class="carousel-inner">
 
-    <div class="active item"> href="#" <img src="./images/slideanoineycarm.jpg"  alt=""/></div>
+    <div class="active item"> <a href="#"> <img src="./images/slideanoineycarm.jpg"  alt=""/></div>
     <div class="item"><img src="./images/slideviejoshospitales.jpg"  alt=""/></div>
     <div class="item"><img src="./images/slideamoralairelibre.jpg"  alt=""/></div>
     <div class="item"><img src="./images/slidecoronacion.jpg"  alt=""/></div>
