--- a/index.html
+++ b/index.html
@@ -99,8 +99,9 @@
     <div class="item"><img src="./images/slidecoronacion.jpg"  alt=""/></div>
   </div>
   <!-- Carousel nav -->
-  <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-  <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
+  <a class="left carousel-control" href="#myCarousel" data-slide="prev"> <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>  </a>
+  <a class="right carousel-control" href="#myCarousel" data-slide="next">&rsaquo;</a>
 </div>
 <script src="./style/bootstrap/js/bootstrap-carousel.js" type="text/javascript"></script>
 
