--- a/index.html
+++ b/index.html
@@ -90,6 +90,13 @@
 
 
 <div id="myCarousel" class="carousel slide">
+ <!-- Indicators -->
+<ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+        <li data-target="#myCarousel" data-slide-to="3"></li>
+      </ol>
   <!-- Carousel items -->
   <div class="carousel-inner">
 
@@ -99,8 +106,7 @@
     <div class="item"><img src="./images/slidecoronacion.jpg"  alt=""/></div>
   </div>
   <!-- Carousel nav -->
-  <a class="left carousel-control" href="#myCarousel" data-slide="prev"> <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>  </a>
+  <a class="left carousel-control" href="#myCarousel" data-slide="prev">&lsaquo;</a>
   <a class="right carousel-control" href="#myCarousel" data-slide="next">&rsaquo;</a>
 </div>
 <script src="./style/bootstrap/js/bootstrap-carousel.js" type="text/javascript"></script>
