--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 
 
-<div id="myCarousel" class="carousel slide">
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
  <!-- Indicators -->
 <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -99,8 +99,14 @@
       </ol>
   <!-- Carousel items -->
   <div class="carousel-inner">
-
-    <div class="active item"> <img src="./images/slideanoineycarm.jpg"  alt=""/></div>
+    <div class="active item"> 
+        <img src="./images/slideanoineycarm.jpg"  alt=""/>
+      <div class="container">
+        <div class="carousel-caption">
+           <p><a class="btn btn-lg btn-primary" href="#" role="button">Ir</a></p>
+        </div>
+       </div>
+    </div>
     <div class="item"><img src="./images/slideviejoshospitales.jpg"  alt=""/></div>
     <div class="item"><img src="./images/slideamoralairelibre.jpg"  alt=""/></div>
     <div class="item"><img src="./images/slidecoronacion.jpg"  alt=""/></div>
