--- a/index.html
+++ b/index.html
@@ -90,20 +90,13 @@
 
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
- <!-- Indicators -->
-<ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-        <li data-target="#myCarousel" data-slide-to="3"></li>
-      </ol>
   <!-- Carousel items -->
   <div class="carousel-inner">
     <div class="active item"> 
         <img src="./images/slideanoineycarm.jpg"  alt=""/>
       <div class="container">
         <div class="carousel-caption">
-           <p><a class="btn btn-lg btn-primary" href="#" role="button">Ir</a></p>
+           <p><a class="btn" href="#" role="button">Ir</a></p>
         </div>
        </div>
     </div>
