--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <img src="./images/slideanoineycarm.jpg"  alt=""/>
       <div class="container">
         <div class="carousel-caption">
-           <p><a class="btn" href="#" role="button">Ir</a></p>
+           <a class="btn" href="#" role="button">Ir</a>
         </div>
        </div>
     </div>
