--- a/index.html
+++ b/index.html
@@ -92,8 +92,10 @@
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
   <!-- Carousel items -->
   <div class="carousel-inner">
-    <div class="active item" href="#" > 
+    <div class="active item"> 
         <img src="./images/slideanoineycarm.jpg"  alt=""/>
+           <a class="btn" href="#" role="button">Ir</a>
+       </div>
     </div>
     <div class="item"><img src="./images/slideviejoshospitales.jpg"  alt=""/></div>
     <div class="item"><img src="./images/slideamoralairelibre.jpg"  alt=""/></div>
