--- a/index.html
+++ b/index.html
@@ -94,8 +94,9 @@
   <div class="carousel-inner">
     <div class="active item"> 
         <img src="./images/slideanoineycarm.jpg"  alt=""/>
-           <a class="btn" href="#" role="button">Ir</a>
-       </div>
+      <div class="container">
+            <p><a class="btn" href="#" role="button">Ir</a></p>
+          </div>
     </div>
     <div class="item"><img src="./images/slideviejoshospitales.jpg"  alt=""/></div>
     <div class="item"><img src="./images/slideamoralairelibre.jpg"  alt=""/></div>
