--- a/index.html
+++ b/index.html
@@ -98,9 +98,21 @@
             <p><a class="btn" href="#" role="button">Ir</a></p>
           </div>
     </div>
-    <div class="item"><img src="./images/slideviejoshospitales.jpg"  alt=""/></div>
-    <div class="item"><img src="./images/slideamoralairelibre.jpg"  alt=""/></div>
-    <div class="item"><img src="./images/slidecoronacion.jpg"  alt=""/></div>
+    <div class="item"><img src="./images/slideviejoshospitales.jpg"  alt=""/>
+      <div class="container">
+            <p><a class="btn" href="#" role="button">Ir</a></p>
+        </div>
+    </div>
+    <div class="item"><img src="./images/slideamoralairelibre.jpg"  alt=""/>
+      <div class="container">
+            <p><a class="btn" href="#" role="button">Ir</a></p>
+          </div>
+   </div>
+    <div class="item"><img src="./images/slidecoronacion.jpg"  alt=""/>
+      <div class="container">
+            <p><a class="btn" href="#" role="button">Ir</a></p>
+          </div>
+   </div>
   </div>
   <!-- Carousel nav -->
   <a class="left carousel-control" href="#myCarousel" data-slide="prev">&lsaquo;</a>
