--- a/index.html
+++ b/index.html
@@ -176,6 +176,10 @@
 <h2 id="sec-1">Actividades en el Teatro "El Zaguán"</h2>
 <div class="outline-text-2" id="text-1">
 <p>
+<i>Antoine y Carmelinda</i>
+</p>
+
+<p>
 Sala de Teatro Independiente
 San Martín 239 - Plottier
 </p>
