--- a/obras.html
+++ b/obras.html
@@ -224,7 +224,7 @@
 <h2 id="sec-3">Amor al aire libre</h2>
 <div class="outline-text-2" id="text-3">
 <p>
-<i>Antoine y Carmelinda</i>
+<a href="#sec-1">Antoine y Carmelinda</a>
 </p>
 
 <div class="row "><div class="span6 ">
