--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
   <div class="carousel-inner">
     <div class="active item"> 
         <img src="./images/slideanoineycarm.jpg"  alt=""/>
+         <a href="www.junoteatro.com.ar/obras.html#sec-1">Antoine y Carmelinda</a>
          </div>
     <div class="item"><img src="./images/slideviejoshospitales.jpg"  alt=""/>
          </div>
