--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@
   <!-- Carousel items -->
   <div class="carousel-inner">
     <div class="active item"> 
-        <img src="./images/slideanoineycarm.jpg"  alt=""/>
-         <a href="obras.html#sec-1">Antoine y Carmelinda</a>
+         <a href="obras.html#sec-1"><img src="./images/slideanoineycarm.jpg"  alt="Antoine y Carmelinda"/></a>
          </div>
     <div class="item"><img src="./images/slideviejoshospitales.jpg"  alt=""/>
          </div>
