--- a/index.html
+++ b/index.html
@@ -95,11 +95,14 @@
     <div class="active item"> 
          <a href="obras.html#sec-1"><img src="./images/slideanoineycarm.jpg"  alt="Antoine y Carmelinda"/></a>
          </div>
-    <div class="item"><img src="./images/slideviejoshospitales.jpg"  alt=""/>
+    <div class="item">
+      <a href="obras.html#sec-2"><img src="./images/slideviejoshospitales.jpg"  alt="Viejos Hospitales"/></a>
          </div>
-    <div class="item"><img src="./images/slideamoralairelibre.jpg"  alt=""/>
+    <div class="item">
+      <a href="obras.html#sec-3"><img src="./images/slideamoralairelibre.jpg"  alt="Amor al Aire Libre"/></a>
         </div>
-    <div class="item"><img src="./images/slidecoronacion.jpg"  alt=""/>
+    <div class="item">
+      <a href="obras.html#sec-4"><img src="./images/slidecoronacion.jpg"  alt="Coronacion"/></a>
         </div>
   </div>
   <!-- Carousel nav -->
